Opened 15 years ago
Closed 15 years ago
#611 closed defect (fixed)
missing G726 support for rtp and rtsp
| Reported by: | Miroslav Slugeň | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | g726 rtp |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Hi, G726 formats are not supported in RTSP protocol, i created patch with G726 support for rtp and rtsp decoder. Please feel free to modify it, i don't need any copyright, my only point is to get it to ffmpeg main tree.
Attachments (4)
Change History (11)
by , 15 years ago
| Attachment: | rtp_g726.diff added |
|---|
comment:1 by , 15 years ago
Camera with RTSP stream, H264 video and G726 audio is for example AirLive OD-2025HD, but there are much more such devices, they work without problems in vlc. And now they works also in ffmpeg with this patch.
comment:2 by , 15 years ago
Please add a license header to the new file and a commit message to the patch (git format-patch -1 will create a patch out of a last local commit with commit message)
thanks
by , 15 years ago
| Attachment: | 0001-libavformat-add-support-for-G726-audio-decoder-in-RT.patch added |
|---|
Signed patch
comment:4 by , 15 years ago
| Keywords: | rtp added |
|---|---|
| Version: | unspecified → git-master |
Please copy the license header (the first 20 lines of any file in the directory libavformat) into your new file rtpdec_g726.c, change the second line into something like "RTP G.726 protocol (RFC XXX)" and put your name in the third line.
by , 15 years ago
| Attachment: | 0001-libavformat-add-G726-audio-decoder-in-RTP.patch added |
|---|
Updated signed patch
comment:6 by , 15 years ago
Patch is since now in ffmpeg git, so it should be also in version 0.8.7, thanks, this ticket can be closed.
comment:7 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Per your request merged into release/0.8.



Patch for adding support of G726 decoder to RTP and RTSP streams.