libavformat: add support for G726 audio decoder in RTP and RTSP streams Fixes Ticket611

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>